Add production build configuration and cross-platform builds
- Configure electron-builder for Windows, macOS, and Linux
- Add build script for cross-platform compilation
- Generate distribution packages:
  - macOS: DMG and ZIP for Intel/Apple Silicon
  - Windows: ZIP portable version
  - Linux: AppImage and TAR.GZ packages
- Add build summary documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "electron", "vite.config.ts"],
+  "include": ["src", "electron/**/*.ts", "vite.config.ts"],
+  "exclude": ["electron/**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
