Add Windows single-file portable version and installer
- Generate METS-Portable-1.0.0.exe (84.6 MB) - single-file portable version
- Generate METS-Setup-1.0.0.exe (84.8 MB) - standard installer
- Keep ZIP version for users who prefer full file structure
- Update build summary with all Windows deployment options

--- a/package.json
+++ b/package.json
@@ -112,6 +112,10 @@
         {
           "target": "zip",
           "arch": ["x64"]
+        },
+        {
+          "target": "nsis",
+          "arch": ["x64"]
         }
       ]
     },
